k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: ajitirto/image-kecil:backend-1

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  selector:
    app: backend

  ports:
    - port: 8080
