k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: ajitirto/image-kecil:frontend-1

          imagePullPolicy: Always

          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 8080

  type: LoadBalancer
